--- a/DOM/project_on_github/project.css
+++ b/DOM/project_on_github/project.css
@@ -13,6 +13,8 @@ body {
 
 .label {
   position: absolute;
+  right: 10px;
+  top: 10px;
   width: 80px;
   height: 40px;
   background-color: lightgray;
@@ -25,9 +27,9 @@ body {
   background-color: white;
   height: 34px;
   border-radius: 50%;
-  top: 3px;
+  top: 1.5px;
   position: absolute;
-  left: 3px;
+  left: 1px;
   border:2px solid black;
   animation: toggleOff 0.4s linear forwards;
 }
@@ -38,7 +40,7 @@ body {
 
 .input:checked + .label .circle {
   animation: toggleOn 0.4s linear forwards;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
 }
 
 @keyframes toggleOn {
@@ -57,4 +59,142 @@ body {
   100% {
     transform: translateX(0);
   }
+}
+
+.container{
+ height: 100%;
+ width: 20%;
+ background-color: aqua;
+ background-attachment: fixed;
+ position: absolute;
+ left:1px;
+ 
+}
+
+
+.container #navbar{
+  height: 100%;
+    cursor: pointer;
+}
+
+
+ 
+.one{
+  height:100px;
+  width:100px;
+  border-radius: 10%;
+  /* border:2px solid  black; */
+  /* background-color: black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left:30%;
+ top:10%;
+}
+
+.two{
+  height:100px;
+  width:100px;
+  border-radius: 10%;
+  /* border:2px solid  black; */
+  /* background-color: black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left:30%;
+ top:10%;
+}
+
+.three{
+  height:100px;
+  width:100px;
+  border-radius: 10%;
+  /* border:2px solid  black; */
+  /* background-color: black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left:30%;
+ top:10%;
+}
+.four{
+  height:100px;
+  width:100px;
+  border-radius: 10%;
+  /* border:2px solid  black; */
+  /* background-color: black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left:30%;
+ top:10%;
+}
+.five{
+  height:100px;
+  width:100px;
+  border-radius: 10%;
+  /* border:2px solid  black; */
+  /* background-color: black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left:30%;
+ top:10%;
+}
+
+.six{
+  height:100px;
+  width:100px;
+  border-radius: 10%;
+  /* border:2px solid  black; */
+  /* background-color: black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left:30%;
+ top:10%;
+}
+
+ /* h1:hover {
+  font-size: 50px;
+} */
+
+
+:hover{
+
+   color:rgb(246, 248, 248);
+   background-color: #8566;
+}
+
+.animated-banner {
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
+  font-size: 2rem;
+  color: #fff;
+  background: linear-gradient(90deg, #ff9800, #ff5e62, #36d1c4, #5b86e5);
+  background-size: 400% 400%;
+  animation: gradientMove 5s ease-in-out infinite, fadeInDown 1s;
+  letter-spacing: 2px;
+  font-weight: bold;
+  position: absolute;
+  top: 0px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+@keyframes gradientMove {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
+}
+
+@keyframes fadeInDown {
+  0% { opacity: 0; transform: translateY(-40px);}
+  100% { opacity: 1; transform: translateY(0);}
 }
